...
        if (isLoading)
          CircularProgressIndicator()
        else
          Row(
            mainAxisAlignment: MainAxisAlignment.spaceEvenly,
            children: [
              RaisedButton(child: Text('Yes!'), onPressed: onYesSelected),
              RaisedButton(child: Text('No!'), onPressed: onNoSelected),
            ],
          ),
      ],
    );
  }
}
...
